// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleItem /> rendering should not render an error message when there is a least one trigger selected 1`] = `
<tr
  class="container container"
  data-id="17"
  id="17"
>
  <td
    colspan="3"
  >
    <div
      class="row"
    >
      <div
        class="col left-col"
      >
        <i
          class="material-icons closeRuleIcon"
        >
          keyboard_arrow_down
        </i>
      </div>
      <div
        class="col center-col"
      >
        <div
          class="d-flex justify-content-between align-items-center mb-1"
        >
          <input
            class="font-weight-bold name component form-control-md form-control"
            placeholder="Name"
            tabindex="1"
            type="text"
            value="my rule"
          />
        </div>
        <div
          class="mb-0 form-group"
        >
          <div
            class="InputField rule-description form-group"
            color=""
          >
            <div
              class=""
            >
              <textarea
                class="form-control"
                id="id-input-2"
                placeholder="Description"
                rows="1"
                type="textarea"
              >
                foo
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col right-col"
      >
        <div
          id="rule-toggle-17"
        >
          <label
            class="switch"
          >
            <input
              checked=""
              readonly=""
              type="checkbox"
            />
            <div
              class="slider"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="full-width"
      >
        <form
          class=""
          id="rule-form-17"
        >
          <div
            class="mb-1 form-group"
          >
            <div
              class="when-container"
            >
              <div
                class="when-btn"
              >
                WHEN
              </div>
              <div
                class="MultiSelectField when-events"
              >
                <div
                  class="select"
                >
                  <span
                    class="tag badge badge-secondary"
                    style="color: rgb(2, 117, 216); margin: 0.25em 0.25em 0px 0.25em;"
                  >
                    <span>
                      ticket created
                      <i
                        class="material-icons ml-1"
                      >
                        close
                      </i>
                    </span>
                  </span>
                  <div
                    class="input-container"
                  >
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <input
                          class="input ml-2"
                          placeholder="Add events..."
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          ticket updated
                        </button>
                        <button
                          class="option dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          ticket assigned
                        </button>
                        <button
                          class="option dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          new message in ticket
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Program-wrapper"
            >
              <div
                class="consequent"
              >
                <span
                  class=""
                >
                  <div
                    class="btn-group"
                    style="padding-left: 59px;"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="ControlStructureButton dropdown-toggle btn btn-secondary"
                      type="button"
                    >
                      THEN
                    </button>
                    <div
                      aria-hidden="true"
                      class="dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <button
                        class="dropdown-item"
                        tabindex="0"
                        type="button"
                      >
                        Action
                      </button>
                      <button
                        class="dropdown-item"
                        tabindex="0"
                        type="button"
                      >
                        "IF" statement
                      </button>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="btn btn-success"
            form="rule-form-17"
            id="rule-item-save"
            type="submit"
          >
            Save rule
          </button>
          <button
            class="ml-3 btn btn-secondary"
            id="rule-item-duplicate"
            type="submit"
          >
            Duplicate rule
          </button>
          <div
            class="component d-inline-block ml-3"
            id="rule-item-discard"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-discard"
              type="button"
            >
              Discard changes
            </button>
          </div>
        </div>
        <div>
          <div
            class="component d-inline-block ml-2 delete-button"
            id="rule-item-delete"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-delete"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
              Delete rule
            </button>
          </div>
        </div>
      </div>
    </div>
  </td>
</tr>
`;

exports[`<RuleItem /> rendering should render with default state 1`] = `
<tr
  class="container container"
  data-id="17"
  id="17"
>
  <td
    colspan="3"
  >
    <div
      class="row"
    >
      <div
        class="col left-col"
      >
        <i
          class="material-icons closeRuleIcon"
        >
          keyboard_arrow_down
        </i>
      </div>
      <div
        class="col center-col"
      >
        <div
          class="d-flex justify-content-between align-items-center mb-1"
        >
          <input
            class="font-weight-bold name component form-control-md form-control"
            placeholder="Name"
            tabindex="1"
            type="text"
            value="my rule"
          />
        </div>
        <div
          class="mb-0 form-group"
        >
          <div
            class="InputField rule-description form-group"
            color=""
          >
            <div
              class=""
            >
              <textarea
                class="form-control"
                id="id-input-1"
                placeholder="Description"
                rows="1"
                type="textarea"
              >
                foo
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col right-col"
      >
        <div
          id="rule-toggle-17"
        >
          <label
            class="switch"
          >
            <input
              checked=""
              readonly=""
              type="checkbox"
            />
            <div
              class="slider"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="full-width"
      >
        <form
          class=""
          id="rule-form-17"
        >
          <div
            class="mb-1 form-group"
          >
            <div
              class="when-container"
            >
              <div
                class="when-btn"
              >
                WHEN
              </div>
              <div
                class="MultiSelectField when-events"
              >
                <div
                  class="select"
                >
                  <div
                    class="input-container"
                  >
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <input
                          class="input ml-2"
                          placeholder="Add events..."
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          ticket created
                        </button>
                        <button
                          class="option dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          ticket updated
                        </button>
                        <button
                          class="option dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          ticket assigned
                        </button>
                        <button
                          class="option dropdown-item"
                          tabindex="0"
                          type="button"
                        >
                          new message in ticket
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="d-inline-block text-danger ml-2"
              >
                You need to select at least one trigger
              </div>
            </div>
            <div
              class="Program-wrapper"
            >
              <div
                class="consequent"
              >
                <span
                  class=""
                >
                  <div
                    class="btn-group"
                    style="padding-left: 59px;"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="ControlStructureButton dropdown-toggle btn btn-secondary"
                      type="button"
                    >
                      THEN
                    </button>
                    <div
                      aria-hidden="true"
                      class="dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <button
                        class="dropdown-item"
                        tabindex="0"
                        type="button"
                      >
                        Action
                      </button>
                      <button
                        class="dropdown-item"
                        tabindex="0"
                        type="button"
                      >
                        "IF" statement
                      </button>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="btn btn-success disabled"
            disabled=""
            form="rule-form-17"
            id="rule-item-save"
            type="submit"
          >
            Save rule
          </button>
          <button
            class="ml-3 btn btn-secondary disabled"
            disabled=""
            id="rule-item-duplicate"
            type="submit"
          >
            Duplicate rule
          </button>
          <div
            class="component d-inline-block ml-3"
            id="rule-item-discard"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-discard"
              type="button"
            >
              Discard changes
            </button>
          </div>
        </div>
        <div>
          <div
            class="component d-inline-block ml-2 delete-button"
            id="rule-item-delete"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-delete"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
              Delete rule
            </button>
          </div>
        </div>
      </div>
    </div>
  </td>
</tr>
`;
